--- a/simulation/index.html
+++ b/simulation/index.html
@@ -132,10 +132,14 @@
                 <br>
                 <img src="assets/pimiento.jpg" alt="">
                 <br>
+                <p><i>Imagen: Pimiento nº30 - Edward Weston. Tomada del monstruo de Sijbrand Toren Cristóbal</i></p>
+                <br>
                 <br>
                 <p>¿Cómo sería una plaza cuyo <b>espectrograma</b> fuera <b>ruido</b> aleatorio, un <b>pimiento</b> o unos <b>calcetines</b>?</p>
                 <br>
                 <img src="assets/calcetos.jpg" alt="">
+                <br>
+                <p><i>Imagen: Calcetines sin nº. Cedida por Ronte Escobar Alonso</i></p>
                 <br>
             </div>
 
