--- a/index.html
+++ b/index.html
@@ -618,9 +618,9 @@
                     <div class="col-sm mb-5">
                         <h3><code>El algoritmo</code></h3>
                         <br>
-                        <p class="texto">La simulación podría recoger todos los datos existentes en los entornos reales para así ser lo más precisa posible pero debido a limitaciones técnicas, deben ajustarse a las necesidades del algoritmo.</p>
+                        <p class="texto">La simulación podría recoger todos los datos medibles de los entornos reales para ser lo más precisa posible, pero por las limitaciones técnicas, la toma de datos debe ajustarse a las necesidades del algoritmo para optimizar su funcionamiento.</p>
                         <br>
-                        <p>El algoritmo debe comunicarse con la simulación y saber que factores son los más importantes y tendrán más peso en la ecuación final. Para que el algoritmo pueda aprender se definen una serie de recompensas para que este sepa cuando va por el camino correcto. Estas recompensas estarán definidas por un objetivo.</p>
+                        <p>El algoritmo debe comunicarse con la simulación y saber qué factores son los más importantes y tendrán más peso en la ejecución final. Para que el algoritmo pueda aprender se definen una serie de recompensas para que este sepa cuando va por el camino correcto. Estas recompensas están definidas por un objetivo.</p>
                     </div>
                 </div>
 
@@ -637,7 +637,8 @@
 
                 <div class="row px-4 px-lg-5 mb-5">
                     <div class="col-sm mb-5 pl-3">
-                        <p>Los algoritmos de los dos últimos ejemplos muestran acercamientos parecidos, la reconfiguración de unos módulos en una matriz, pero sus objetivos son muy distintos. Sus algoritmos son menos potentes ya que no usan machine learning, es decir, que el algoritmo no evoluciona.</p>
+                        <p>Los algoritmos de los dos últimos ejemplos muestran acercamientos parecidos, la reconfiguración de unos módulos en una matriz, pero sus objetivos son muy distintos. Sus algoritmos son menos potentes ya que no usan <i>machine learning</i>, es decir, que el algoritmo no evoluciona por sí mismo.</p>
+                        <br>
                     </div>
                 </div>
 
