--- a/simulation/index.html
+++ b/simulation/index.html
@@ -143,6 +143,8 @@
 
             <div id="infoPanel6">
                 <br>
+                <p><i><u>(Haz click en las imágenes de toma de datos para ver los resultados de cada proceso.)</u></i> </p>
+                <br>
                 <p>Para generar la ciudad monstruosa, primero tomamos <b>datos en vídeo</b> de una deriva en bicicleta (<i>hotline</i>) por el centro de <b>Alicante</b> y los procesamos con <i>Pix2Pix</i> para generar un modelo <b>segmentado</b> (el algoritmo reconoce los distintos elementos: edificio, pavimento, bicicleta, peatón…). Esos elementos los traduciremos al lenguaje de los pimientos o los calcetines, pero para ello debemos crear una <b>base de datos amplia</b>.</p>
                 <br>
                 <img src="assets/ciudad segmentada.png" alt="">
@@ -155,10 +157,6 @@
                 <br>
                 <img src="assets/dataset calcetos.png" alt="">
                 <br>
-                <br>
-                <p><i><u>Haz click en las imágenes de toma de datos para ver los resultados de cada proceso.</u></i> </p>
-                <br>
-                
             </div>
 
         </div>
