--- a/simulation/html/6_monstruo/index.html
+++ b/simulation/html/6_monstruo/index.html
@@ -28,6 +28,7 @@
                 <p class="pasoNumero">1</p>
                 <p class="pasoTexto">Toma de datos</p>
             </div>
+            <p id="instruccion">Haz click en las imágenes para modificar la representación</p>
             <div class="iframeImagenes">
                 <img  class="pasoImagen" id="experimento1" src="1.png" alt="">
                 <img  class="pasoImagen" id="experimento2" src="2.png" alt="">
